@@ -10,9 +10,6 @@ use Scalar::Util qw( blessed );
 use Storable qw( dclone );
 use Carp qw( croak );
 
-our $VERSION = '0.09010';
-$VERSION = eval $VERSION;
-
 sub options_from_model {
     my ( $self, $base, $attrs ) = @_;
 
